tests/snapshots/examples_fixtures/type_system__failing__102_missing_colon_function_param.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/102_missing_colon_function_param.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Type Annotation Colon

Missing `:` in function parameter type annotation. Write it as `x: Type`.

  examples/type_system/failing/102_missing_colon_function_param.flx:1:10
  |
1 | fn add(x Int, y: Int) -> Int {
  |          ^^^

Hint:
  Type annotations use `name: Type`.
== stdout ==
<not executed>
