tests/snapshots/examples_fixtures/type_system__failing__10_adt_non_exhaustive.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/10_adt_non_exhaustive.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  examples/type_system/failing/10_adt_non_exhaustive.flx:13:5
   |
13 |     match c {
   |     ^^^^^^^^^
14 |         Red -> "red",
   | ^^^^^^^^^^^^^^^^^^^^^
15 |         Green -> "green",
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
16 |         // Missing: Blue
   | ^^^^^^^^^^^^^^^^^^^^^^^^
17 |     }
   | ^^^^^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Console).

  examples/type_system/failing/10_adt_non_exhaustive.flx:28:1
   |
28 | print(pass(t))
   | ^^^^^^^^^^^^^^
   | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/type_system/failing/10_adt_non_exhaustive.flx:28:1
   |
28 | print(pass(t))
   | ^^^^^^^^^^^^^^
   | -------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 3 errors.
== stdout ==
<not executed>
