tests/snapshots/examples_fixtures/type_system__failing__111_call_arg_anonymous_fn.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/111_call_arg_anonymous_fn.flx
== compile ==
failed (compile)
== diagnostics ==
Error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to this function.

  examples/type_system/failing/111_call_arg_anonymous_fn.flx:6:49
  |
6 |     let _x = (if true { greet } else { greet })(42)
  |                                                 ^^
  |                                                 -- this argument has type `Int`

Note:
  expected argument type: String
  found argument type: Int

Help:
  Try `to_string(...)` to convert a `Int` into a `String`.
== stdout ==
<not executed>
